	skk-jisx0201-set-henkan-point,
	skk-jisx0201-set-henkan-point-subr): Abolish.
	(skk-jisx0201-mode-map): Use `skk-j-mode-map' instead.
	(skk-jisx0201-orig-rule-tree): New variable.
	(skk-set-okurigana, skk-insert): Advise to do OKURI-ARI
	conversion.

	* skk-vars.el (skk-jisx0201-rule-tree,
	skk-jisx0201-current-rule-tree, jsix0201-mode-map): Abolish.

	* skk.el (skk-emulate-original-map): Do emulation also in
	skk-jisx0201-mode.

2001-09-05  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-isearch.el (isearch-repeat): Don't show
	`skk-isearch-whitespace-regexp' in regexp i-search.

	* skk.el (skk-j-mode-map): Don't use
	`substitute-key-definition'. Just get what are needed.
	(skk-henkan-in-minibuff): Bind `minibuffer-max-depth' to nil.

2001-09-04  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-num.el (skk-num-type3-kanji-1, skk-num-type5-kanji-1):
	Return "" for "0".

2001-09-03  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* skk-lookup.el: Require lookup after loading lookup.el and only
	when `lookup-use-bitmap' is non-nil.

2001-09-01  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk.el (skk-define-menu-bar-map): Fix menu commands.

2001-09-01  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-e21.el (skk-e21-prepare-modeline-properties): Do nothing on
	tty.

	* skk-macs.el (skk-mode-string-to-indicator): Ditto.

	* skk.el (skk-make-indicator-alist-1): Ditto.

2001-09-01  YOSHIZAWA Masahiro <manbou@ceres.dti.ne.jp>

	* skk-e21.el (skk-e21-modeline-property): Fix for Emacs-21.0.105.

2001-09-01  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* etc/Emacs.ad: Add items for popup menu.

	* skk-e21.el: Popup menu improvements.
	(skk-e21-modeline-menu): Always use a new hash table so that key
	comparison should always fail.

	* skk-xemacs.el (skk-xemacs-find-func-keys): Show "C-j" if the
	key description is "LFD".

2001-08-31  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* *: Re-indent.

	* ChangeLog.1, ChangeLog.2, ChangeLog.2.daredevil: New files.
