@@ -20,6 +20,7 @@
 
 	* skk-vars.el (skk-jisx0201-rule-tree,
 	skk-jisx0201-current-rule-tree, jsix0201-mode-map): Abolish.
+	(skk-jisx0201-orig-rule-tree): New variable.
 
 	* skk.el (skk-emulate-original-map): Do emulation also in
 	skk-jisx0201-mode.
@@ -1751,8 +1752,8 @@
 
 
 
-Version: $Id: ChangeLog,v 1.353 2001/09/06 21:28:44 czkmt Exp $
-Last Modified: $Date: 2001/09/06 21:28:44 $
+Version: $Id: ChangeLog,v 1.354 2001/09/06 21:32:10 czkmt Exp $
+Last Modified: $Date: 2001/09/06 21:32:10 $
 
 Local Variables:
 buffer-file-coding-system: iso-2022-jp
